# stk-code

./: .gitignore  CMakeLists.txt
data/shaders/: IBL.frag  SubsurfaceConvolutionH.frag  SubsurfaceConvolutionV.frag  apply_ssao.frag  backlitsunlightshadow.frag  billboard.frag  colorize.frag  detailledobject.frag  fog.frag  gaussian6h.comp  gaussian6h.frag  gaussian6v.comp  gaussian6v.frag  gi.frag  header.txt  importance_sampling_specular.frag  instanced_detailledobject.frag  instanced_grass.vert  instanced_normalmap.frag  instanced_object.frag  instanced_object_unlit.frag  instanced_objectref.frag  lensblend.frag  normalmap.frag  object.frag  object_unlit.frag  objectref.frag  particle.frag  pointlight.frag  pointlightscatter.frag  skinning.vert  sky.frag  (+7 more)
lib/irrlicht/: CMakeLists.txt
lib/irrlicht/include/: CMeshBuffer.h  ESceneNodeAnimatorTypes.h  ESceneNodeTypes.h  IAnimatedMesh.h  IAnimatedMeshSceneNode.h  IAttributeExchangingObject.h  IAttributes.h  IBillboardTextSceneNode.h  ICameraSceneNode.h  ICursorControl.h  IDummyTransformationSceneNode.h  IDynamicMeshBuffer.h  IGUIElement.h  IGUIEnvironment.h  IGUIFileOpenDialog.h  IGUIFont.h  IGUIFontBitmap.h  IGUIImage.h  IGUIImageList.h  IGUIInOutFader.h  IGUIListBox.h  IGUIMeshViewer.h  IGUIScrollBar.h  IGUISkin.h  IGUISpinBox.h  IGUISpriteBank.h  IGUIStaticText.h  IGUITabControl.h  IGUITable.h  IGUIToolbar.h  IGUITreeView.h  IGUIWindow.h  IImage.h  IImageLoader.h  IMaterialRenderer.h  IMaterialRendererServices.h  IMeshBuffer.h  IMeshManipulator.h  IParticleAffector.h  IParticleAnimatedMeshSceneNodeEmitter.h  (+33 more)
lib/irrlicht/include/Core/: IAnimatedMesh.h  IImage.h  IMeshBuffer.h  ISceneManager.h  ISceneNode.h  ISkinnedMesh.h  ITexture.h  S3DVertex.h  SViewFrustum.h
lib/irrlicht/include/GUI/: IGUIEditBox.h  IGUIElement.h  IGUIEnvironment.h  IGUIFileOpenDialog.h  IGUIFont.h  IGUIFontBitmap.h  IGUIImage.h  IGUIImageList.h  IGUIInOutFader.h  IGUIListBox.h  IGUIMeshViewer.h  IGUIScrollBar.h  IGUISkin.h  IGUISpinBox.h  IGUISpriteBank.h  IGUIStaticText.h  IGUITabControl.h  IGUITable.h  IGUIToolbar.h  IGUITreeView.h  IGUIWindow.h
lib/irrlicht/include/Maths/: matrix4.h  rect.h  triangle3d.h  vector2d.h
lib/irrlicht/include/SceneNodes/: IAnimatedMeshSceneNode.h  IBillboardSceneNode.h  IBillboardTextSceneNode.h  IBoneSceneNode.h  ICameraSceneNode.h  ILightSceneNode.h  IMeshSceneNode.h  IParticleSystemSceneNode.h  ITerrainSceneNode.h  ITextSceneNode.h
lib/irrlicht/include/Util/: IGeometryCreator.h  IMeshManipulator.h  SVertexManipulator.h
lib/irrlicht/source/Irrlicht/: CAttributeImpl.h  CAttributes.cpp  CColorConverter.cpp  CColorConverter.h  CDefaultGUIElementFactory.cpp  CDefaultGUIElementFactory.h  CDefaultSceneNodeAnimatorFactory.cpp  CDefaultSceneNodeFactory.cpp  CFileSystem.cpp  CGeometryCreator.h  CImage.h  CImageWriterBMP.cpp  CImageWriterPNG.cpp  CMeshCache.cpp  CMeshManipulator.cpp  CMeshManipulator.h  CNullDriver.cpp  CNullDriver.h  COSOperator.cpp  COctreeTriangleSelector.cpp  COpenGLTexture.cpp  COpenGLTexture.h  CSceneCollisionManager.cpp  CSceneCollisionManager.h  CSceneManager.cpp  CSceneManager.h  CSkinnedMesh.cpp  CSkinnedMesh.h  CTerrainTriangleSelector.cpp  CTriangleBBSelector.cpp  CTriangleSelector.cpp  CTriangleSelector.h  CVideoModeList.h  IAttribute.h  IImagePresenter.h  IZBuffer.h  Irrlicht.cpp  Octree.h  S2DVertex.h
lib/irrlicht/source/Irrlicht/Device/: CIrrDeviceLinux.cpp  CIrrDeviceLinux.h  CIrrDeviceSDL.cpp  CIrrDeviceStub.cpp  CIrrDeviceStub.h  CIrrDeviceWin32.cpp  CIrrDeviceWin32.h
lib/irrlicht/source/Irrlicht/GUI/: CGUIButton.cpp  CGUIButton.h  CGUICheckBox.cpp  CGUICheckBox.h  CGUIColorSelectDialog.cpp  CGUIColorSelectDialog.h  CGUIComboBox.cpp  CGUIComboBox.h  CGUIContextMenu.cpp  CGUIContextMenu.h  CGUIEditBox.cpp  CGUIEditBox.h  CGUIEnvironment.cpp  CGUIEnvironment.h  CGUIFileOpenDialog.cpp  CGUIFileOpenDialog.h  CGUIFont.cpp  CGUIFont.h  CGUIImage.cpp  CGUIImage.h  CGUIImageList.h  CGUIInOutFader.cpp  CGUIInOutFader.h  CGUIListBox.cpp  CGUIListBox.h  CGUIMenu.cpp  CGUIMeshViewer.cpp  CGUIMeshViewer.h  CGUIMessageBox.cpp  CGUIMessageBox.h  CGUIModalScreen.cpp  CGUIModalScreen.h  CGUIScrollBar.cpp  CGUIScrollBar.h  CGUISkin.cpp  CGUISkin.h  CGUISpinBox.cpp  CGUISpinBox.h  CGUISpriteBank.cpp  CGUISpriteBank.h  (+12 more)
lib/irrlicht/source/Irrlicht/Loaders/: CB3DMeshFileLoader.cpp  CB3DMeshFileLoader.h  CImageLoaderBMP.cpp  CImageLoaderJPG.cpp  CImageLoaderPNG.cpp
lib/irrlicht/source/Irrlicht/SceneNodes/: CAnimatedMeshSceneNode.cpp  CAnimatedMeshSceneNode.h  CBillboardSceneNode.cpp  CBillboardSceneNode.h  CBoneSceneNode.cpp  CBoneSceneNode.h  CCameraSceneNode.cpp  CCameraSceneNode.h  CCubeSceneNode.cpp  CCubeSceneNode.h  CEmptySceneNode.cpp  CEmptySceneNode.h  CLightSceneNode.cpp  CLightSceneNode.h  CMeshSceneNode.cpp  CMeshSceneNode.h  COctreeSceneNode.cpp  COctreeSceneNode.h  CParticleSystemSceneNode.cpp  CParticleSystemSceneNode.h  CSkyBoxSceneNode.cpp  CSkyBoxSceneNode.h  CSphereSceneNode.cpp  CSphereSceneNode.h  CTerrainSceneNode.cpp  CTerrainSceneNode.h  CTextSceneNode.cpp  CTextSceneNode.h  CWaterSurfaceSceneNode.cpp  CWaterSurfaceSceneNode.h
lib/irrlicht/source/Irrlicht/SceneNodes/Animators/: CSceneNodeAnimatorCameraFPS.h  CSceneNodeAnimatorCameraMaya.h  CSceneNodeAnimatorCollisionResponse.cpp
lib/irrlicht/source/Irrlicht/SceneNodes/Particles/: CParticleAnimatedMeshSceneNodeEmitter.cpp  CParticleAttractionAffector.cpp  CParticleAttractionAffector.h  CParticleBoxEmitter.cpp  CParticleBoxEmitter.h  CParticleCylinderEmitter.cpp  CParticleCylinderEmitter.h  CParticleFadeOutAffector.cpp  CParticleFadeOutAffector.h  CParticleGravityAffector.cpp  CParticleGravityAffector.h  CParticleMeshEmitter.cpp  CParticleMeshEmitter.h  CParticlePointEmitter.cpp  CParticlePointEmitter.h  CParticleRingEmitter.cpp  CParticleRingEmitter.h  CParticleRotationAffector.cpp  CParticleRotationAffector.h  CParticleScaleAffector.cpp  CParticleScaleAffector.h  CParticleSphereEmitter.cpp  CParticleSphereEmitter.h
lib/irrlicht/source/Irrlicht/Writers/: CImageWriterBMP.cpp  CImageWriterJPG.cpp  CImageWriterPNG.cpp
(+203 files in other folders)
